# List-Comprehension

./: Exercícios List Comprehension - Exercicios 1.ipynb  List Comprehensions e Functions em Iterables 01.ipynb  List Comprehensions e Functions em Iterables 02.ipynb  List Comprehensions e Functions em Iterables 04.ipynb  README.md  pyproject.toml  requirements.txt
